fullSandbox11072023/force-app/main/default/objects/User_Licensing__c/User_Licensing__c.object-meta.xml
<CustomObject>
    <description>This is a custom object that is related to a daily snapshot to help create an audit log and show user adoption of Salesforce.com by User and BU. - ESC / 22APR2016</description>
    <label>User Licensing</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>User Licensing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Licensing</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>