fullSandbox11072023/force-app/main/default/objects/User_Licensing__c/fields/Daily_Login__c.field-meta.xml
<CustomField>
    <fullName>Daily_Login__c</fullName>
    <description>CASE(MOD( TODAY() - DATE(1900, 1, 6), 7), 
0, &quot;Saturday&quot;, 
1, &quot;Sunday&quot;, 
2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</description>
    <formula>DATEVALUE(Last_Login__c) = DATEVALUE(Audit_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Login</label>
    <type>Checkbox</type>
</CustomField>