fullSandbox11072023/force-app/main/default/objects/User_Licensing__c/fields/Day_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Day_Numeric__c</fullName>
    <formula>DAY( DATEVALUE( Audit_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>