fullSandbox11072023/force-app/main/default/objects/User_Licensing__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <formula>User__r.License_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Type</label>
    <type>Text</type>
</CustomField>