fullSandbox11072023/force-app/main/default/objects/User_Licensing__c/fields/Logged_in_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_Last_7_Days__c</fullName>
    <formula>(DATEVALUE(CreatedDate) - DATEVALUE(Last_Login__c))  &lt;= 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in Last 7 Days</label>
    <type>Checkbox</type>
</CustomField>