fullSandbox11072023/force-app/main/default/objects/User_Licensing__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Licensing</relationshipLabel>
    <relationshipName>User_Licensing</relationshipName>
    <type>Lookup</type>
</CustomField>