fullSandbox11072023/force-app/main/default/objects/User_Licensing__c/fields/User_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>User_Business_Unit__c</fullName>
    <formula>TEXT( User__r.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Business Unit</label>
    <type>Text</type>
</CustomField>